anadir users endpoints

--- a/apps/backend/src/Presentation/appsettings.Development.json
+++ b/apps/backend/src/Presentation/appsettings.Development.json
@@ -9,5 +9,22 @@
   "ConnectionStrings": {
     "Database": "Host=localhost;Port=5432;Database=postgres-db;Username=postgres;Password=postgres;Include Error Detail=true",
     "Redis": "localhost:6379"
+  },
+  "HealthChecks": {
+    "Enabled": true
+  },
+  "Cache": {
+    "DefaultDurationMinutes": 10
+  },
+  "Serilog": {
+    "Using": ["Serilog.Sinks.Console"],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information"
+      }
+    },
+    "WriteTo": [{ "Name": "Console" }],
+    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"]
   }
 }
