--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "dev": "dotnet watch --project ./src/Presentation run",
     "restore": "dotnet restore",
-    "build": "dotnet build --configuration Release --no-restore"
+    "build": "dotnet build --configuration Release --no-restore",
+    "migrate:add": "dotnet ef migrations --project ./src/Infrastructure/ --startup-project ./src/Presentation/ add"
   }
 }
