--- a/apps/backend/src/Presentation/Presentation.csproj
+++ b/apps/backend/src/Presentation/Presentation.csproj
@@ -1,18 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-    
+
     <ItemGroup>
-        <PackageReference Include="oqo0.SwaggerThemes" />
-        <PackageReference Include="Swashbuckle.AspNetCore" />
+        <PackageReference Include="AspNetCore.HealthChecks.UI.Client"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="oqo0.SwaggerThemes"/>
+        <PackageReference Include="Serilog.AspNetCore"/>
+        <PackageReference Include="Swashbuckle.AspNetCore"/>
     </ItemGroup>
 
     <ItemGroup>
-      <Content Include="..\.dockerignore">
-        <Link>.dockerignore</Link>
-      </Content>
+        <Content Include="..\.dockerignore">
+            <Link>.dockerignore</Link>
+        </Content>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+        <ProjectReference Include="..\Infrastructure\Infrastructure.csproj"/>
     </ItemGroup>
 
 </Project>
