add backend(entities, endpoints, services) & python service setup

--- a/apps/backend/src/Presentation/appsettings.Development.json
+++ b/apps/backend/src/Presentation/appsettings.Development.json
@@ -10,6 +10,9 @@
     "Database": "Host=localhost;Port=5432;Database=postgres-db;Username=postgres;Password=postgres;Include Error Detail=true",
     "Redis": "localhost:6379"
   },
+  "AIService": {
+    "BaseUrl": "http://localhost:8001"
+  },
   "HealthChecks": {
     "Enabled": true
   },
