--- a/apps/backend/src/Infrastructure/Infrastructure.csproj
+++ b/apps/backend/src/Infrastructure/Infrastructure.csproj
@@ -5,6 +5,10 @@
         <PackageReference Include="AspNetCore.HealthChecks.Redis"/>
         <PackageReference Include="FluentEmail.Smtp"/>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis"/>
         <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks"/>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL"/>
