--- a/apps/backend/src/Presentation/appsettings.Development.json
+++ b/apps/backend/src/Presentation/appsettings.Development.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedOrigins": "http://localhost:3000",
+  "AllowedOrigins": "http://localhost:3000,http://localhost:5001",
   "ConnectionStrings": {
     "Database": "Host=localhost;Port=5432;Database=postgres-db;Username=postgres;Password=postgres;Include Error Detail=true",
     "Redis": "localhost:6379"
