--- a/apps/services/ai-team-generator/requirements.txt
+++ b/apps/services/ai-team-generator/requirements.txt
@@ -2,3 +2,7 @@ fastapi>=0.68.0
 uvicorn>=0.15.0
 anthropic>=0.3.0
 python-dotenv>=0.19.0
+pydantic~=2.11.4
+langgraph~=0.4.3
+langchain-anthropic~=0.3.13
+mcp_use
