update backend infrastructure and dependencies

--- a/apps/backend/src/Presentation/appsettings.Development.json
+++ b/apps/backend/src/Presentation/appsettings.Development.json
@@ -13,6 +13,12 @@
   "AIService": {
     "BaseUrl": "http://localhost:8001"
   },
+  "JwtSettings": {
+    "SecretKey": "SoyMiguel_Valorant4Fun!2025_JalaMatch_SecretKey_12345",
+    "Issuer": "Jala Match Issuer",
+    "Audience": "Jala Match Audience",
+    "ExpirationMinutes": 1440
+  },
   "HealthChecks": {
     "Enabled": true
   },
