--- a/apps/backend/src/Infrastructure/Infrastructure.csproj
+++ b/apps/backend/src/Infrastructure/Infrastructure.csproj
@@ -3,6 +3,7 @@
     <ItemGroup>
         <PackageReference Include="AspNetCore.HealthChecks.NpgSql"/>
         <PackageReference Include="AspNetCore.HealthChecks.Redis"/>
+        <PackageReference Include="BCrypt.Net-Next" />
         <PackageReference Include="FluentEmail.Smtp"/>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
@@ -12,6 +13,7 @@
         <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis"/>
         <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks"/>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL"/>
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" />
         <PackageReference Include="ZiggyCreatures.FusionCache"/>
         <PackageReference Include="ZiggyCreatures.FusionCache.Serialization.SystemTextJson"/>
     </ItemGroup>
