update backend configuration and program setup

--- a/apps/backend/src/Presentation/appsettings.Development.json
+++ b/apps/backend/src/Presentation/appsettings.Development.json
@@ -13,6 +13,27 @@
   "AIService": {
     "BaseUrl": "http://localhost:8001"
   },
+  "Email": {
+    "SenderEmail": "",
+    "SenderName": "",
+    "Smtp": {
+      "Host": "",
+      "Port": "",
+      "Username": "",
+      "Password": "",
+      "EnableSsl": ""
+    },
+    "SendDelayMs": 500,
+    "MaxRetryAttempts": 3,
+    "RetryDelayMs": 1000,
+    "SmtpTimeoutMs": 30000
+  },
+  "Frontend": {
+    "DashboardUrl": "http://localhost:3000/my-teams"
+  },
+  "Company": {
+    "Name": "Jala Match"
+  },
   "JwtSettings": {
     "SecretKey": "SoyMiguel_Valorant4Fun!2025_JalaMatch_SecretKey_12345",
     "Issuer": "Jala Match Issuer",
