--- a/apps/backend/src/Presentation/appsettings.json
+++ b/apps/backend/src/Presentation/appsettings.json
@@ -10,5 +10,11 @@
   "ConnectionStrings": {
     "Database": "",
     "Redis": ""
+  },
+  "Email": {
+    "SendDelayMs": 500,
+    "MaxRetryAttempts": 3,
+    "RetryDelayMs": 1000,
+    "SmtpTimeoutMs": 30000
   }
 }
