--- a/apps/backend/src/Presentation/appsettings.Development.json
+++ b/apps/backend/src/Presentation/appsettings.Development.json
@@ -46,6 +46,11 @@
   "Cache": {
     "DefaultDurationMinutes": 10
   },
+  "Cloudinary": {
+    "CloudName": "",
+    "ApiKey": "",
+    "ApiSecret": ""
+  },
   "Serilog": {
     "Using": ["Serilog.Sinks.Console"],
     "MinimumLevel": {
