--- a/apps/backend/Directory.Packages.props
+++ b/apps/backend/Directory.Packages.props
@@ -5,6 +5,7 @@
   <ItemGroup>
     <!-- Static code analysis -->
     <PackageVersion Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageVersion Include="CloudinaryDotNet" Version="1.27.6" />
     <PackageVersion Include="DotNetEnv" Version="3.1.1" />
     <PackageVersion Include="FluentEmail.Core" Version="3.0.2" />
     <PackageVersion Include="FluentEmail.Razor" Version="3.0.2" />
